src/objects/PM_QA_Spec__c.object
<CustomObject>
    <fields>
        <fullName>Parameter__c</fullName>
        <formula>QA_Spec__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parameter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>PM QA/QC Specs</relationshipLabel>
        <relationshipName>QA_Specs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QA_Spec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Spec</label>
        <referenceTo>QA_Spec__c</referenceTo>
        <relationshipLabel>PM QA/QC Specs</relationshipLabel>
        <relationshipName>PM_QA_QC_Specs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Description__c</fullName>
        <formula>Test_Method__r.Test_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Method</label>
        <referenceTo>Test_Method__c</referenceTo>
        <relationshipLabel>PM QA/QC Specs</relationshipLabel>
        <relationshipName>PM_QA_QC_Specs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <formula>QA_Spec__r.UOM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM</label>
        <type>Text</type>
    </fields>
    <label>PM QA/QC Spec</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Product__c</columns>
        <columns>Range__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QA-{0000000000}</displayFormat>
        <label>QA/QC Spec Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM QA/QC Specs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>